--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>পারাবার সাহিত্য সংস্কৃতি সংসদ</title>
+  <link rel="stylesheet" href="styles.css">
+  <script defer src="script.js"></script>
+</head>
+<body>
+  <!-- হেডার -->
+  <header>
+    <!-- হ্যামবার্গার মেনু -->
+    <div class="hamburger" id="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
 
+    <!-- নেভিগেশন -->
+    <nav id="nav-menu">
+      <ul>
+        <li><a href="index.html">হোম</a></li>
+        <li><a href="about.html">পরিচিতি</a></li>
+        <li><a href="publications.html">মৌলিক প্রকাশনা</a></li>
+        <li><a href="gallery.html">ছবিঘর</a></li>
+        <li><a href="committee.html">পরিচালনা পরিষদ</a></li>
+        <li><a href="presidents.html">সভাপতি</a></li>
+        <li><a href="contact.html">যোগাযোগ</a></li>
+        <li><a href="donation.html">ডোনেশন</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- হিরো সেকশন -->
+  <section class="hero">
+    <div class="hero-text">
+      <h1>পারাবার সাহিত্য সংস্কৃতি সংসদ, চট্টগ্রাম</h1>
+      <p>সাংস্কৃতিক সচেতনতা ও সাহিত্যিক প্রেরণার জন্য একটি ইসলামী সাংস্কৃতিক সংগঠন</p>
+      <a href="about.html" class="btn">আরও জানুন</a>
+    </div>
+  </section>
+
+  <!-- ফুটার -->
+  <footer>
+    <p>© ২০২৫ পারাবার সাহিত্য সংস্কৃতি সংসদ, চট্টগ্রাম</p>
+  </footer>
+</body>
+</html>
