--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="donation.html">ডোনেশন</a></li>
       </ul>
     </nav>
+<script src="script.js"></script>
   </header>
 
   <!-- হিরো সেকশন -->
