--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- হেডার -->
+
+  <!-- Header -->
   <header>
-    <!-- হ্যামবার্গার মেনু -->
-    <div class="hamburger" id="hamburger">
-      <div></div>
-      <div></div>
-      <div></div>
+    <div class="header-container">
+      <a href="index.html">
+        <img src="https://i.ibb.co/MDrmqFQ1/Untitled-6000-x-1000-px-6000-x-2500-px-6000-x-2000-px-20251007-235311-0000.png" alt="Parabar Logo" class="logo">
+      </a>
+
+      <div class="hamburger" id="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
 
-    <!-- নেভিগেশন -->
     <nav id="nav-menu">
       <ul>
         <li><a href="index.html">হোম</a></li>
@@ -31,21 +36,16 @@
     </nav>
   </header>
 
-  <!-- হিরো সেকশন -->
+  <!-- Hero -->
   <section class="hero">
-    <div class="hero-text">
-      <h1>পারাবার সাহিত্য সংস্কৃতি সংসদ, চট্টগ্রাম</h1>
-      <p>সাংস্কৃতিক সচেতনতা ও সাহিত্যিক প্রেরণার জন্য একটি ইসলামী সাংস্কৃতিক সংগঠন</p>
-      <a href="about.html" class="btn">আরও জানুন</a>
-    </div>
+    <h1>পারাবার সাহিত্য সংস্কৃতি সংসদ, চট্টগ্রাম</h1>
+    <p>সাংস্কৃতিক সচেতনতা ও সাহিত্যিক প্রেরণার ইসলামী সংগঠন</p>
   </section>
 
-  <!-- ফুটার -->
   <footer>
     <p>© ২০২৫ পারাবার সাহিত্য সংস্কৃতি সংসদ, চট্টগ্রাম</p>
   </footer>
 
-  <!-- স্ক্রিপ্ট -->
   <script src="script.js"></script>
 </body>
 </html>
