--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
     </div>
   </header>
   <!-- -------- Header End -------- -->
+  <div class="elementor-widget-container">
+							<h3 class="elementor-headline elementor-headline-animation-type-typing elementor-headline-letters">
+					<span class="elementor-headline-plain-text elementor-headline-text-wrapper">পারাবারের</span>
+				<span class="elementor-headline-dynamic-wrapper elementor-headline-text-wrapper">
+					<span class="elementor-headline-dynamic-text elementor-headline-text-active">
+				সর্বশেষ			</span>
+						</span>
+					<span class="elementor-headline-plain-text elementor-headline-text-wrapper">প্রোডাকশন</span>
+					</h3>
+						</div>
 
   <script src="script.js"></script>
 </body>
