--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8">
+<!-- Essential for correct character display -->
+    <link href="https://fonts.maateen.me/solaiman-lipi/font.css" rel="stylesheet">
+    <!-- Alternative link from the GitHub repo: -->
+    <!-- <link href='http://mdminhazulhaque.github.io/solaimanlipi/css/solaimanlipi.css' rel='stylesheet' type='text/css'> -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>পারাবার সাহিত্য সংস্কৃতি সংসদ</title>
   <link rel="stylesheet" href="style.css">
