--- a/index.html
+++ b/index.html
@@ -18,20 +18,18 @@
     <div class="header-container">
       <img src="https://i.ibb.co/MDrmqFQ1/Untitled-6000-x-1000-px-6000-x-2500-px-6000-x-2000-px-20251007-235311-0000.png" 
            alt="Parabar Logo" class="logo">
-
-      <nav id="nav-menu">
-  <ul>
-    <li><a href="index.html">হোম</a></li>
-    <li><a href="about.html">পরিচিতি</a></li>
-    <li><a href="publications.html">মৌলিক প্রকাশনা</a></li>
-    <li><a href="gallery.html">ছবিঘর</a></li>
-    <li><a href="committee.html">কমিটি</a></li>
-    <li><a href="president.html">সভাপতি</a></li>
-    <li><a href="contact.html">যোগাযোগ</a></li>
-    <li><a href="donation.html">ডোনেশন</a></li>
-  </ul>
-</nav>
-      <div class="hamburger" id="hamburger">
+<nav id="nav-menu">  
+    <ul>  
+      <li><a href="#">হোম</a></li>  
+      <li><a href="#">পরিচিতি</a></li>  
+      <li><a href="#">মৌলিক প্রকাশনা</a></li>  
+      <li><a href="#">ছবিঘর</a></li>  
+      <li><a href="#">পরিচালনা পরিষদ</a></li>  
+      <li><a href="#">সভাপতি</a></li>  
+      <li><a href="#">যোগাযোগ</a></li>  
+      <li><a href="#">ডোনেশন</a></li>  
+    </ul>  
+  </nav>      <div class="hamburger" id="hamburger">
         <div></div>
         <div></div>
         <div></div>
