--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li><a href="publications.html">মৌলিক প্রকাশনা</a></li>
     <li><a href="gallery.html">ছবিঘর</a></li>
     <li><a href="committee.html">কমিটি</a></li>
-    <li><a href="president.html">সভাপতি</a></li>
+    <li><a href="presidents.html">সাবেক সভাপতিবৃন্দ</a></li>
     <li><a href="contact.html">যোগাযোগ</a></li>
     <li><a href="donation.html">ডোনেশন</a></li>
   </ul>
