--- a/index.html
+++ b/index.html
@@ -60,5 +60,19 @@
 
 
   <script src="script.js"></script>
+<!-- -------- Footer Start -------- -->
+<footer style="
+    background:#111;
+    color:#eee;
+    text-align:center;
+    padding:18px 10px;
+    font-size:16px;
+    margin-top:40px;
+    font-family:'SolaimanLipi', sans-serif;
+">
+    <p style="margin:5px 0;">Developer: <strong>Nafis Mohammed Jami</strong></p>
+    <p style="margin:5px 0;">All Rights Reserved © Parabar ID Department</p>
+</footer>
+<!-- -------- Footer End -------- -->
 </body>
 </html>
