--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
         <span class="static-text">প্রোডাকশন</span>
     </h3>
 </div>
+
+<iframe 
+    width="560" 
+    height="315" 
+    src="https://youtu.be/zT7rB9STldk?si=j930SxANEowv7aYf" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen
+
+    style="display:block; margin:20px auto; max-width:100%; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);"
+></iframe>
 <iframe 
     width="560" 
     height="315" 
