--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <iframe 
     width="560" 
     height="315" 
-    src="https://youtu.be/zT7rB9STldk?si=j930SxANEowv7aYf" 
+    src="https://youtu.be/zT7rB9STldk?si=j930SxANEowv7aYf ;start=8" 
     title="YouTube video player" 
     frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
