--- a/committee.html
+++ b/committee.html
@@ -24,7 +24,7 @@
     <li><a href="about.html">পরিচিতি</a></li>
     <li><a href="publications.html">মৌলিক প্রকাশনা</a></li>
     <li><a href="gallery.html">ছবিঘর</a></li>
-    <li><a href="committee.html">কমিটি</a></li>
+    <li><a href="committee.html">পরিচারনা পর্ষদ</a></li>
     <li><a href="presidents.html">সাবেক সভাপতিবৃন্দ</a></li>
     <li><a href="contact.html">যোগাযোগ</a></li>
     <li><a href="donation.html">ডোনেশন</a></li>
@@ -40,7 +40,8 @@
 <div class="parabar-headline-box">
     <h3 class="parabar-headline">
         
-        <span class="typing-text">পরিচালনা পরিষদ</span>
+        <span class="typing-text">পরিচালনা</span>
+  <span class="typing-text">পরিষদ</span
         
     </h3>
 </div>
