--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <link href="https://fonts.maateen.me/solaiman-lipi/font.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>যোগাযোগ | পারাবার সাহিত্য সংস্কৃতি সংসদ</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contact.css">
+
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+
+<body>
+
+<!-- ===== Header ===== -->
+<header>
+    <div class="header-container">
+        <img src="https://i.ibb.co/MDrmqFQ1/Untitled-6000-x-1000-px-6000-x-2500-px-6000-x-2000-px-20251007-235311-0000.png"
+             class="logo">
+        <nav id="nav-menu">
+            <ul>
+                <li><a href="index.html">হোম</a></li>
+                <li><a href="about.html">পরিচিতি</a></li>
+                <li><a href="publications.html">মৌলিক প্রকাশনা</a></li>
+                <li><a href="gallery.html">ছবিঘর</a></li>
+                <li><a href="committee.html">কমিটি</a></li>
+                <li><a href="presidents.html">সাবেক সভাপতিবৃন্দ</a></li>
+                <li><a href="contact.html">যোগাযোগ</a></li>
+                <li><a href="donation.html">ডোনেশন</a></li>
+            </ul>
+        </nav>
+        <div class="hamburger" id="hamburger"><div></div><div></div><div></div></div>
+    </div>
+</header>
+
+<!-- ================== SECTION 1 ================== -->
+<section class="contact-section">
+    <h2>পারাবার (প্রধান)</h2>
+
+    <div class="buttons">
+        <a class="btn facebook" href="#" target="_blank"><i class="fab fa-facebook-f"></i> অফিসিয়াল পেইজ</a>
+        <a class="btn whatsapp" href="https://whatsapp.com/channel/XXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp চ্যানেল</a>
+        <a class="btn telegram" href="#" target="_blank"><i class="fab fa-telegram"></i> Telegram চ্যানেল</a>
+        <a class="btn youtube" href="#" target="_blank"><i class="fab fa-youtube"></i> YouTube চ্যানেল</a>
+        <a class="btn whatsapp" href="https://wa.me/8801XXXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp কন্টাক্ট</a>
+        <a class="btn facebook-group" href="#" target="_blank"><i class="fab fa-facebook"></i> Facebook গ্রুপ</a>
+    </div>
+
+    <iframe src="https://www.google.com/maps?q=Parabar+Sahitya+Sangskriti+Sangsad+Bangladesh&output=embed"></iframe>
+</section>
+
+<!-- ================== SECTION 2 ================== -->
+<section class="contact-section">
+    <h2>দেওয়ানহাট শাখা</h2>
+
+    <div class="buttons">
+        <a class="btn whatsapp" href="https://wa.me/8801XXXXXXXX1" target="_blank">
+            <i class="fab fa-whatsapp"></i> WhatsApp কন্টাক্ট
+        </a>
+    </div>
+
+    <iframe src="https://www.google.com/maps?q=Dewanhat+Chattogram+Bangladesh&output=embed"></iframe>
+</section>
+
+<!-- ================== SECTION 3 ================== -->
+<section class="contact-section">
+    <h2>বড়পোল শাখা</h2>
+
+    <div class="buttons">
+        <a class="btn facebook" href="#" target="_blank"><i class="fab fa-facebook-f"></i> Facebook পেইজ</a>
+        <a class="btn whatsapp" href="https://wa.me/8801XXXXXXXX2" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp কন্টাক্ট</a>
+    </div>
+
+    <iframe src="https://www.google.com/maps?q=Boro+Pol+Chattogram+Bangladesh&output=embed"></iframe>
+</section>
+
+<!-- ================== SECTION 4 ================== -->
+<section class="contact-section">
+    <h2>পতেঙ্গা শাখা</h2>
+
+    <div class="buttons">
+        <a class="btn facebook" href="#" target="_blank"><i class="fab fa-facebook-f"></i> Facebook পেইজ</a>
+        <a class="btn whatsapp" href="https://wa.me/8801XXXXXXXX3" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp কন্টাক্ট</a>
+    </div>
+
+    <iframe src="https://www.google.com/maps?q=Patenga+Chattogram+Bangladesh&output=embed"></iframe>
+</section>
+
+<!-- ===== Footer ===== -->
+<footer>
+    <p>Developer: <strong>Nafis Mohammed Jami</strong></p>
+    <p>All Rights Reserved © Parabar ID Department</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
