--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <a class="btn facebook-group" href="#" target="_blank"><i class="fab fa-facebook"></i> Facebook গ্রুপ</a>
     </div>
 
-    <iframe src="https://maps.app.goo.gl/NqT3pCSCTmUXVhPD6"></iframe>
+    <iframe src="https://maps.app.goo.gl/NqT3pCSCTmUXVhPD6&output=embed"></iframe>
 </section>
 
 <!-- ================== SECTION 2 ================== -->
