--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 
     <iframe src="https://maps.app.goo.gl/NqT3pCSCTmUXVhPD6&output=embed"></iframe>
 </section>
-
+<!--
 <!-- ================== SECTION 2 ================== -->
 <section class="contact-section">
     <h2>দেওয়ানহাট শাখা</h2>
@@ -64,7 +64,7 @@
     </div>
 
     <iframe src="https://www.google.com/maps?q=Dewanhat+Chattogram+Bangladesh&output=embed"></iframe>
-</section>
+</section> -->
 
 <!-- ================== SECTION 3 ================== -->
 <section class="contact-section">
