--- a/contact.html
+++ b/contact.html
@@ -36,36 +36,22 @@
         <div class="hamburger" id="hamburger"><div></div><div></div><div></div></div>
     </div>
 </header>
-
 <!-- ================== SECTION 1 ================== -->
 <section class="contact-section">
-    <h2>পারাবার (প্রধান)</h2>
+    <h2>প্রধান শাখা - দেওয়ানহাট</h2>
 
     <div class="buttons">
         <a class="btn facebook" href="#" target="_blank"><i class="fab fa-facebook-f"></i> অফিসিয়াল পেইজ</a>
-        <a class="btn whatsapp" href="https://whatsapp.com/channel/XXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp চ্যানেল</a>
+        <a class="btn whatsapp" href="https://wa.me/8801836776227" target="_blank">
+            <i class="fab fa-whatsapp"></i> WhatsApp কন্টাক্ট
+        </a>
         <a class="btn telegram" href="#" target="_blank"><i class="fab fa-telegram"></i> Telegram চ্যানেল</a>
         <a class="btn youtube" href="#" target="_blank"><i class="fab fa-youtube"></i> YouTube চ্যানেল</a>
-        <a class="btn whatsapp" href="https://wa.me/8801XXXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp কন্টাক্ট</a>
         <a class="btn facebook-group" href="#" target="_blank"><i class="fab fa-facebook"></i> Facebook গ্রুপ</a>
     </div>
 
-    <iframe src="https://maps.app.goo.gl/NqT3pCSCTmUXVhPD6&output=embed"></iframe>
+    <iframe src="https://maps.app.goo.gl/NqT3pCSCTmUXVhPD6" allowfullscreen></iframe>
 </section>
-<!--
-<!-- ================== SECTION 2 ================== -->
-<section class="contact-section">
-    <h2>দেওয়ানহাট শাখা</h2>
-
-    <div class="buttons">
-        <a class="btn whatsapp" href="https://wa.me/8801XXXXXXXX1" target="_blank">
-            <i class="fab fa-whatsapp"></i> WhatsApp কন্টাক্ট
-        </a>
-    </div>
-
-    <iframe src="https://www.google.com/maps?q=Dewanhat+Chattogram+Bangladesh&output=embed"></iframe>
-</section> -->
-
 <!-- ================== SECTION 3 ================== -->
 <section class="contact-section">
     <h2>বড়পোল শাখা</h2>
