--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <span class="static-text">প্রোডাকশন</span>
     </h3>
 </div><iframe 
-    width="480" 
-    height="270" 
+    width="48" 
+    height="27" 
     src="https://www.youtube.com/embed/zT7rB9STldk?si=j930SxANEowv7aYf&autoplay=1" 
     title="YouTube video player" 
     frameborder="0" 
@@ -54,20 +54,15 @@
     allowfullscreen
     style="display:block; margin:20px auto; max-width:100%; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);"
 ></iframe>
-<iframe 
-    width="480" 
-    height="270" 
-    src="https://www.youtube.com/embed/aKjRauxk9ks?si=ROaY3cg8VnH-gIoF&amp;start=8" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-    referrerpolicy="strict-origin-when-cross-origin" 
-    allowfullscreen
-
-    style="display:block; margin:20px auto; max-width:100%; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);"
-></iframe>
 
 
+  <h2>Login</h2>
+  <input type="email" id="email" placeholder="Email"><br><br>
+  <input type="password" id="password" placeholder="Password"><br><br>
+  <button id="loginBtn">Login</button>
+
+  <!-- আগের JS ফাইল Include করো -->
+  <script type="module" src="script.js"></script>
 
   <script src="script.js"></script>
 <!-- -------- Footer Start -------- -->
