--- a/admin.html
+++ b/admin.html
@@ -19,6 +19,7 @@
   <button id="logoutBtn">Logout</button>
 
   <script type="module">
+ alert("SCRIPT LOADED");
     import { auth, db } from './firebase.js';
     import { signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
     import { collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
