--- a/admin.html
+++ b/admin.html
@@ -8,69 +8,55 @@
 
   <h3>Add Fee</h3>
   <input type="text" id="studentName" placeholder="Student Name"><br><br>
-  <input type="text" id="Id" placeholder="Student ID"><br><br>
+  <input type="text" id="Id" placeholder="Student ID (S001)"><br><br>
   <input type="text" id="month" placeholder="Month"><br><br>
   <input type="number" id="amount" placeholder="Amount"><br><br>
-  <button id="addFeeBtn">Add Fee</button>
+  <button onclick="addFee()">Add Fee</button>
 
-  <h3>All Fees</h3>
   <ul id="feeList"></ul>
 
-  <button id="logoutBtn">Logout</button>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
 
-  <script type="module">
- alert("SCRIPT LOADED");
-    import { auth, db } from './firebase.js';
-    import { signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-    import { collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+  <script>
+    // Firebase config (তোমার দেওয়া)
+    const firebaseConfig = {
+      apiKey: "AIzaSyAzsAlg4MYpRODqZhdxjYlCCX16dq1b-uw",
+      authDomain: "student-fee-system.firebaseapp.com",
+      projectId: "student-fee-system",
+      storageBucket: "student-fee-system.firebasestorage.app",
+      messagingSenderId: "110170819904",
+      appId: "1:110170819904:web:22ff3d4348c1aed43b3ea5"
+    };
 
-    const addFeeBtn = document.getElementById('addFeeBtn');
-    const feeList = document.getElementById('feeList');
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-    // Add Fee Button Click
-    addFeeBtn.addEventListener('click', async () => {
-      const name = document.getElementById('studentName').value.trim();
-      const Id = document.getElementById('Id').value.trim();
-      const month = document.getElementById('month').value.trim();
-      const amount = Number(document.getElementById('amount').value);
+    function addFee() {
+      alert("BUTTON CLICKED");
 
-      if(!name || !Id || !month || !amount){
-        alert("All fields are required!");
+      const name = document.getElementById("studentName").value;
+      const Id = document.getElementById("Id").value;
+      const month = document.getElementById("month").value;
+      const amount = Number(document.getElementById("amount").value);
+
+      if (!name || !Id || !month || !amount) {
+        alert("All fields required");
         return;
       }
 
-      // Debug alert
-      alert("Button Clicked!\nName: " + name + "\nId: " + Id + "\nMonth: " + month + "\nAmount: " + amount);
-
-      try {
-        await addDoc(collection(db, "fees"), { name, Id, month, amount });
-        alert("Fee added successfully!");
-        location.reload();
-      } catch(error) {
-        alert(error.message);
-      }
-    });
-
-    // Show All Fees
-    async function loadFees() {
-      const querySnapshot = await getDocs(collection(db, "fees"));
-      feeList.innerHTML = "";
-      querySnapshot.forEach((doc) => {
-        const data = doc.data();
-        const li = document.createElement('li');
-        li.textContent = `${data.name} (${data.Id}) - ${data.month} : ${data.amount}`;
-        feeList.appendChild(li);
+      db.collection("fees").add({
+        name: name,
+        Id: Id,
+        month: month,
+        amount: amount
+      }).then(() => {
+        alert("Fee added successfully");
+      }).catch(err => {
+        alert(err.message);
       });
     }
-
-    loadFees();
-
-    // Logout
-    document.getElementById('logoutBtn').addEventListener('click', async () => {
-      await signOut(auth);
-      window.location.href = "index.html";
-    });
-
   </script>
 </body>
 </html>
