--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
     style="display:block; margin:20px auto; max-width:100%; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);"
 ></iframe>
 
+<iframe src="https://pbpathagar.librarika.com/widgets/search/medium" width="300" height="200" marginwidth="0" marginheight="0" align="top" scrolling="No" frameborder="0" hspace="0" vspace="0"></iframe>
 
-  <h2>Login</h2>
+  <!-- <h2>Login</h2>
   <input type="email" id="email" placeholder="Email"><br><br>
   <input type="password" id="password" placeholder="Password"><br><br>
-  <button id="loginBtn">Login</button>
+  <button id="loginBtn">Login</button> -->
 
   <!-- আগের JS ফাইল Include করো -->
   <script type="module" src="script.js"></script>
 
-  <script src="script.js"></script>
+  
 <!-- -------- Footer Start -------- -->
 <footer style="
     background:#111;
