--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
     style="display:block; margin:20px auto; max-width:100%; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);"
 ></iframe>
   
+<!-- ===============================
+     Parabar Pathagar Section
+================================= -->
+<div class="parabar-pathagar">
+    <!-- Section Title -->
+    <h2 class="pp-title">পারাবার পাঠাগার</h2>
+
+    <!-- Iframe -->
+    <iframe 
+        src="https://pbpathagar.librarika.com/widgets/search/medium"
+        class="pp-iframe"
+        scrolling="no"
+        frameborder="0"
+        align="top"
+    ></iframe>
+
+    <!-- Instruction Text -->
+    <p class="pp-instruction">
+        বই খুঁজতে ইংরেজি অক্ষরে টাইপ করে সার্চ করুন
+    </p>
+
+    <!-- Button -->
+    <a href="https://pbpathagar.librarika.com/search/catalogs" target="_blank" class="pp-button">
+        সম্পূর্ণ লিস্ট দেখুন
+    </a>
+</div>
 <!-- <h2>Login</h2>
   <input type="email" id="email" placeholder="Email"><br><br>
   <input type="password" id="password" placeholder="Password"><br><br>
