--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
     allowfullscreen
     style="display:block; margin:20px auto; max-width:100%; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);"
 ></iframe>
+<iframe 
+    width="240" 
+    height="135" 
+    src="https://www.youtube.com/embed/1GvTcBa2c-U?si=sh_u79lJhRyRScn9&autoplay=1" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen
+    style="display:block; margin:20px auto; max-width:100%; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2);"
+></iframe>
   
 <!-- ===============================
      Parabar Pathagar Section
