--- a/presidents.html
+++ b/presidents.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+  <meta charset="UTF-8">
+<!-- Essential for correct character display -->
+    <link href="https://fonts.maateen.me/solaiman-lipi/font.css" rel="stylesheet">
+    <!-- Alternative link from the GitHub repo: -->
+    <!-- <link href='http://mdminhazulhaque.github.io/solaimanlipi/css/solaimanlipi.css' rel='stylesheet' type='text/css'> -->
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>পারাবার সাহিত্য সংস্কৃতি সংসদ</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- -------- Header Start -------- -->
+  <header>
+    <div class="header-container">
+      <img src="https://i.ibb.co/MDrmqFQ1/Untitled-6000-x-1000-px-6000-x-2500-px-6000-x-2000-px-20251007-235311-0000.png" 
+           alt="Parabar Logo" class="logo">
+<nav id="nav-menu">
+  <ul>
+    <li><a href="index.html">হোম</a></li>
+    <li><a href="about.html">পরিচিতি</a></li>
+    <li><a href="publications.html">মৌলিক প্রকাশনা</a></li>
+    <li><a href="gallery.html">ছবিঘর</a></li>
+    <li><a href="committee.html">কমিটি</a></li>
+    <li><a href="presidents.html">সাবেক সভাপতিবৃন্দ</a></li>
+    <li><a href="contact.html">যোগাযোগ</a></li>
+    <li><a href="donation.html">ডোনেশন</a></li>
+  </ul>
+<!-- -------- Footer Start -------- -->
+<footer style="
+    background:#111;
+    color:#eee;
+    text-align:center;
+    padding:18px 10px;
+    font-size:16px;
+    margin-top:40px;
+    font-family:'SolaimanLipi', sans-serif;
+">
+    <p style="margin:5px 0;">Developer: <strong>Nafis Mohammed Jami</strong></p>
+    <p style="margin:5px 0;">All Rights Reserved © Parabar ID Department</p>
+</footer>
+<!-- -------- Footer End -------- -->
+</body>
+</html>
