--- a/presidents.html
+++ b/presidents.html
@@ -29,6 +29,7 @@
     <li><a href="contact.html">যোগাযোগ</a></li>
     <li><a href="donation.html">ডোনেশন</a></li>
   </ul>
+<h3> এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ </h3>
 <!-- -------- Footer Start -------- -->
 <footer style="
     background:#111;
