--- a/about.html
+++ b/about.html
@@ -35,7 +35,8 @@
       </div>
     </div>
   </ul>
-<h3> এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ </h3>
+
+<h3 style="text-align:center > এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ </h3>
 <!-- -------- Footer Start -------- -->
 <footer style="
     background:#111;
