--- a/about.html
+++ b/about.html
@@ -36,7 +36,8 @@
     </div>
   </ul>
 
-<h3 style="text-align:center > এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ </h3>
+<p style="text-align:center > এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ </p>
+
 <!-- -------- Footer Start -------- -->
 <footer style="
     background:#111;
