--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     </div>
   </ul>
 
-<p style="text-align:center > এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ </p>
+<p style="text-align:center" >এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ</p>
 
 <!-- -------- Footer Start -------- -->
 <footer style="
