--- a/about.html
+++ b/about.html
@@ -38,6 +38,8 @@
 
 <p style="text-align:center" >এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ</p>
 
+<script type="module" src="script.js"></script>
+
 <!-- -------- Footer Start -------- -->
 <footer style="
     background:#111;
