--- a/committee.html
+++ b/committee.html
@@ -211,7 +211,7 @@
     <!-- ভারপ্রাপ্ত চেয়ারম্যান -->
     <div class="member-card chairman">
       <img src="https://i.ibb.co/8L56Dcgg/FB-IMG-1765265535641.jpg" alt="ভারপ্রাপ্ত চেয়ারম্যান মাইমুনুল ইসলাম মামুন">
-      <h3 class="designation">ভারপ্রাপ্ত চেয়ারম্যান</h3>
+      <h3 class="designation"> চেয়ারম্যান</h3>
       <p>মাইমুনুল ইসলাম মামুন</p>
     </div>
 
