--- a/presidents.html
+++ b/presidents.html
@@ -28,8 +28,18 @@
     <li><a href="presidents.html">সাবেক সভাপতিবৃন্দ</a></li>
     <li><a href="contact.html">যোগাযোগ</a></li>
     <li><a href="donation.html">ডোনেশন</a></li>
+ </nav>     <div class="hamburger" id="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
   </ul>
-<h3> এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ </h3>
+
+<p style="text-align:center" >এই পেইজটি নির্মাণাধীন, শীঘ্রই উন্মুক্ত হবে ইনশাআল্লাহ</p>
+
+<script type="module" src="script.js"></script>
+
 <!-- -------- Footer Start -------- -->
 <footer style="
     background:#111;
@@ -41,7 +51,7 @@
     font-family:'SolaimanLipi', sans-serif;
 ">
     <p style="margin:5px 0;">Developer: <strong>Nafis Mohammed Jami</strong></p>
-    <p style="margin:5px 0;">All Rights Reserved © Parabar ID Department</p>
+    <p style="margin:5px 0;">All Rights Reserved © Parabar IT Department</p>
 </footer>
 <!-- -------- Footer End -------- -->
 </body>
