--- a/committee.html
+++ b/committee.html
@@ -116,7 +116,7 @@
     }
 
     .member-card .designation {
-      font-family: "BenSenHandwriting", cursive;
+      font-family: "SolaimanLipi", cursive;
       font-size: 22px;
       font-weight: normal;
       color: #2c3e50;
@@ -226,7 +226,7 @@
   <!-- Footer -->
   <footer>
     <p style="margin:5px 0;">Developer: <strong>Nafis Mohammed Jami</strong></p>
-    <p style="margin:5px 0;">All Rights Reserved © Parabar ID Department</p>
+    <p style="margin:5px 0;">All Rights Reserved © Parabar IT Department</p>
   </footer>
 
   <script src="script.js"></script>
