--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 <!-- ===== Footer ===== -->
 <footer>
     <p>Developer: <strong>Nafis Mohammed Jami</strong></p>
-    <p>All Rights Reserved © Parabar ID Department</p>
+    <p>All Rights Reserved © Parabar IT Department</p>
 </footer>
 
 <script src="script.js"></script>
