--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     font-family:'SolaimanLipi', sans-serif;
 ">
     <p style="margin:5px 0;">Developer: <strong>Nafis Mohammed Jami</strong></p>
-    <p style="margin:5px 0;">All Rights Reserved © Parabar ID Department</p>
+    <p style="margin:5px 0;">All Rights Reserved © Parabar IT Department</p>
 </footer>
 <!-- -------- Footer End -------- -->
 </body>
