--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8">
+<meta name="description" content="This is official website of Parabar Shilpigosti | পারাবার শিল্পীগোষ্ঠীর অফিসিয়াল ওয়েবসাইট। সাংস্কৃতিক কার্যক্রম, প্রকাশনা, অনুষ্ঠান ও সংগঠনের তথ্য এখানে পাওয়া যাবে।">
 <!-- Essential for correct character display -->
     <link href="https://fonts.maateen.me/solaiman-lipi/font.css" rel="stylesheet">
     <!-- Alternative link from the GitHub repo: -->
     <!-- <link href='http://mdminhazulhaque.github.io/solaimanlipi/css/solaimanlipi.css' rel='stylesheet' type='text/css'> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>পারাবার সাহিত্য সংস্কৃতি সংসদ</title>
+  <title>Parabar Shilpigosti | Official website </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
