--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8">
-<meta name="description" content="This is official website of Parabar Shilpigosti | পারাবার শিল্পীগোষ্ঠীর অফিসিয়াল ওয়েবসাইট। সাংস্কৃতিক কার্যক্রম, প্রকাশনা, অনুষ্ঠান ও সংগঠনের তথ্য এখানে পাওয়া যাবে" >
-<meta name="keywords" content="পারাবার শিল্পীগোষ্ঠী, Parabar, parabar Shilpigosti,শিল্পীগোষ্ঠী, সাংস্কৃতিক সংগঠন">
-<meta property="og:title" content="পারাবার শিল্পীগোষ্ঠী | অফিসিয়াল ওয়েবসাইট">
-<meta property="og:description" content="পারাবার শিল্পীগোষ্ঠী অফিসিয়াল ওয়েবসাইট — উপরের তথ্যগুলো এখানে পাবেন।">
+
+<meta name="description" content="Parabar Shilpigosti (পারাবার শিল্পীগোষ্ঠী) এর অফিসিয়াল ওয়েবসাইট। সাংস্কৃতিক কার্যক্রম, প্রকাশনা, অনুষ্ঠান ও সংগঠনের সর্বশেষ তথ্য এখানে পাওয়া যাবে।">
+
+<meta name="keywords" content="Parabar Shilpigosti, পারাবার শিল্পীগোষ্ঠী, Parabar CTG, সাংস্কৃতিক সংগঠন চট্টগ্রাম">
+
+<meta name="author" content="Parabar Shilpigosti">
+
+<meta property="og:title" content="Parabar Shilpigosti | পারাবার শিল্পীগোষ্ঠী">
+<meta property="og:description" content="Official website of Parabar Shilpigosti (পারাবার শিল্পীগোষ্ঠী).">
 <meta property="og:url" content="https://jamibd25.github.io/Parabar.ctg.bd/">
+<meta property="og:type" content="website">
 <!-- Essential for correct character display -->
     <link href="https://fonts.maateen.me/solaiman-lipi/font.css" rel="stylesheet">
     <!-- Alternative link from the GitHub repo: -->
