--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Parabar Shilpigosti | Official website </title>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Parabar Shilpigosti",
+  "alternateName": "পারাবার শিল্পীগোষ্ঠী",
+  "url": "https://jamibd25.github.io/Parabar.ctg.bd/",
+  "logo": "https://i.ibb.co/MDrmqFQ1/Untitled-6000-x-1000-px-6000-x-2500-px-6000-x-2000-px-20251007-235311-0000.png",
+  "description": "Parabar Shilpigosti (পারাবার শিল্পীগোষ্ঠী) একটি সাংস্কৃতিক সংগঠন যা প্রকাশনা, অনুষ্ঠান ও সামাজিক কার্যক্রম পরিচালনা করে।",
+  "sameAs": [
+    "https://www.facebook.com/share/1DhJNJ7MF9/"
+  ]
+}
+</script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
